fix: file selector icon color

--- a/src/angular/styles/_typography.scss
+++ b/src/angular/styles/_typography.scss
@@ -304,7 +304,7 @@
   --sbb-fieldset-legend-nested-font-size: #{sbb.pxToRem(20)};
 
   // File selector
-  --sbb-file-selector-list-remove-icon-color: var(--sbb-color-storm);
+  --sbb-file-selector-list-remove-icon-color: var(--sbb-color-granite);
 
   // Forms
   --sbb-form-background-color-readonly: var(--sbb-color-milk);
