fix(angular/table): change dark mode hover and active colors

--- a/src/angular/styles/_typography.scss
+++ b/src/angular/styles/_typography.scss
@@ -975,10 +975,10 @@
       --sbb-status-message-color: var(--sbb-color-white);
 
       // Table
-      --sbb-table-cell-background-color-hover: var(--sbb-color-midnight);
+      --sbb-table-cell-background-color-hover: var(--sbb-color-charcoal);
       --sbb-table-cell-actions-background-color-lean: var(--sbb-color-background);
       --sbb-table-thead-color: var(--sbb-color-smoke);
-      --sbb-table-row-selected-background-color: var(--sbb-color-charcoal);
+      --sbb-table-row-selected-background-color: var(--sbb-color-iron);
       --sbb-table-row-selected-border-bottom-color: var(--sbb-color-text);
       --sbb-table-border-color: var(--sbb-color-anthracite);
       --sbb-table-thead-border-color: var(--sbb-color-anthracite);
