fix(angular/sidebar): darker hover color for sidebar items in dark mode
Use a darker color for sidebar items on hover than for menu items. This is necessary because the sidebar has a lighter background in dark mode than the menu.

--- a/src/angular/sidebar/sidebar/sidebar.scss
+++ b/src/angular/sidebar/sidebar/sidebar.scss
@@ -200,12 +200,16 @@
 
   &:is(:hover, :focus) {
     @include sbb.sbbMenuItemRedLean();
+    // Override the background color because the sidebar is lighter than the menu item in dark mode.
+    background-color: var(--sbb-sidebar-background-color-hover);
   }
 
   &.sbb-active {
     @include sbb.sbbMenuItemBlackLean();
     pointer-events: none;
     cursor: default;
+    // Override the background color because the sidebar is lighter than the menu item in dark mode.
+    background-color: var(--sbb-sidebar-background-color-active);
 
     &:focus-visible {
       @include sbb.sbbFocusOutline();
