feat(journey-maps): improve styling
Refs: ROKAS-1723

--- a/src/journey-maps/angular/components/level-switch/level-switch-horizontal.html
+++ b/src/journey-maps/angular/components/level-switch/level-switch-horizontal.html
@@ -24,13 +24,15 @@
         </div>
       </ng-container>
     </div>
-    <button
-      #mainButton
-      class="main-button"
-      (click)="toggleSideButtons()"
-      (keydown.enter)="toggleSideButtons()"
-    >
-      {{ selectedLevel ?? 'N/A' }}
-    </button>
+    <div class="map-control-button-wrapper">
+      <button
+        #mainButton
+        class="main-button map-control-button"
+        (click)="toggleSideButtons()"
+        (keydown.enter)="toggleSideButtons()"
+      >
+        {{ selectedLevel ?? 'N/A' }}
+      </button>
+    </div>
   </div>
 </div>
