--- a/src/journey-maps/angular/components/level-switch/level-switch-horizontal.scss
+++ b/src/journey-maps/angular/components/level-switch/level-switch-horizontal.scss
@@ -5,13 +5,15 @@
 
 .map-control-button {
   cursor: pointer;
-  border-radius: 8px;
+  border-radius: 18px;
   text-align: center;
   vertical-align: middle;
+  width: 36px;
 
   @include esta.mq($from: tabletPortrait) {
     @at-root .map-control-container.small-buttons #{&} {
-      border-radius: 6px;
+      border-radius: 13px;
+      width: 26px;
     }
   }
 }
@@ -25,47 +27,6 @@
 
 .map-control-button-wrapper {
   border-bottom: 1px solid #e5e5e5;
-}
-
-.map-control-button-wrapper:first-child {
-  border-radius: 24px 24px 0 0;
-
-  @include esta.mq($from: tabletPortrait) {
-    @at-root .map-control-container.small-buttons #{&} {
-      border-radius: 16px 16px 0 0;
-    }
-  }
-
-  .map-control-button {
-    border-radius: 24px 24px 8px 8px;
-
-    @include esta.mq($from: tabletPortrait) {
-      @at-root .map-control-container.small-buttons #{&} {
-        border-radius: 16px 16px 6px 6px;
-      }
-    }
-  }
-}
-
-.map-control-button-wrapper:last-child {
-  border-radius: 0 0 24px 24px;
-  border-bottom-width: 0;
-
-  @include esta.mq($from: tabletPortrait) {
-    @at-root .map-control-container.small-buttons #{&} {
-      border-radius: 0 0 16px 16px;
-    }
-  }
-
-  .map-control-button {
-    border-radius: 8px 8px 24px 24px;
-
-    @include esta.mq($from: tabletPortrait) {
-      @at-root .map-control-container.small-buttons #{&} {
-        border-radius: 6px 6px 16px 16px;
-      }
-    }
-  }
 }
 
 .button-container {
@@ -92,18 +53,8 @@
   visibility: visible; /* Make visible when expanded */
 }
 
-.side-button,
-.main-button {
-  margin-left: 10px; /* Space between buttons */
-}
-
 .vertical-buttons {
   display: flex;
   flex-direction: column;
   align-items: flex-end; /* Aligns items to the right */
-}
-
-button {
-  /* Your styles for the main button */
-  margin: 5px 0; /* Space above and below the main button */
 }
