--- a/src/journey-maps/angular/components/level-switch/level-switch-horizontal.html
+++ b/src/journey-maps/angular/components/level-switch/level-switch-horizontal.html
@@ -12,7 +12,7 @@
             #sideButton
             class="side-button"
             (click)="onSideButtonClick(level)"
-            (keydown.enter)="onSideButtonClick(level)"
+            (keydown.enter)="onSideButtonEnter(level, $event)"
             [ngClass]="{
           'map-control-button-selected': level === selectedLevel,
           'map-control-button': level !== selectedLevel
@@ -29,7 +29,7 @@
         #mainButton
         class="main-button map-control-button"
         (click)="toggleSideButtons()"
-        (keydown.enter)="toggleSideButtons()"
+        (keydown.enter)="onMainButtonEnter($event)"
       >
         {{ selectedLevel ?? 'N/A' }}
       </button>
