feat(journey-maps): keep side buttons open while tabbing
Refs: ROKAS-1723

--- a/src/journey-maps/angular/components/level-switch/level-switch-horizontal.html
+++ b/src/journey-maps/angular/components/level-switch/level-switch-horizontal.html
@@ -13,6 +13,7 @@
             class="side-button"
             (click)="onSideButtonClick(level)"
             (keydown.enter)="onSideButtonEnter(level, $event)"
+            (focus)="startCountdown()"
             [ngClass]="{
           'map-control-button-selected': level === selectedLevel,
           'map-control-button': level !== selectedLevel
