--- a/src/journey-maps/angular/style/_functions.scss
+++ b/src/journey-maps/angular/style/_functions.scss
@@ -1,5 +1,6 @@
 @use 'icons' as i;
 @use '@sbb-esta/angular' as esta;
+@use './variables' as v;
 
 @mixin map-controls-shared {
   button {
@@ -11,14 +12,14 @@
   }
 
   .map-control-container {
-    margin: 16px;
+    margin: v.$controlsMargin;
     background: esta.$sbbColorWhite;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
-    border-radius: 24px;
+    border-radius: v.$controlsWidth / 2;
 
     @include esta.mq($from: tabletPortrait) {
       &.small-buttons {
-        margin: 6px;
+        margin: v.$controlsMarginSmall;
       }
     }
   }
@@ -26,13 +27,13 @@
   .map-control-button-wrapper {
     line-height: 36px;
     padding: 6px;
-    width: 48px;
+    width: v.$controlsWidth;
 
     @include esta.mq($from: tabletPortrait) {
       @at-root .map-control-container.small-buttons #{&} {
         line-height: 26px;
         padding: 3px;
-        width: 32px;
+        width: v.$controlsWidthSmall;
       }
     }
   }
@@ -48,7 +49,7 @@
 
     @include esta.mq($from: tabletPortrait) {
       @at-root .map-control-container.small-buttons #{&} {
-        border-radius: 16px;
+        border-radius: v.$controlsWidthSmall / 2;
       }
     }
 
