--- a/src/journey-maps/angular/components/level-switch/level-switch-horizontal.html
+++ b/src/journey-maps/angular/components/level-switch/level-switch-horizontal.html
@@ -5,7 +5,7 @@
   @fade
 >
   <div class="button-container">
-    <div class="side-buttons-container" [class.show]="showSideButtons">
+    <div class="side-buttons-container" [class.expanded]="showSideButtons">
       <ng-container *ngFor="let level of visibleLevels">
         <div class="map-control-button-wrapper">
           <button
@@ -29,7 +29,7 @@
         <button class="side-button map-control-button" tabindex="-1"></button>
       </div>
     </div>
-    <div class="map-control-button-wrapper main-button-wrapper">
+    <div class="map-control-button-wrapper main-button-wrapper" [class.expanded]="showSideButtons">
       <button
         #mainButton
         class="map-control-button main-button"
