feat(journey-maps): show '-' instead of 'N/A' for no level selected
Refs: ROKAS-1723

--- a/src/journey-maps/angular/components/level-switch/level-switch-horizontal.html
+++ b/src/journey-maps/angular/components/level-switch/level-switch-horizontal.html
@@ -36,7 +36,7 @@
         (click)="toggleSideButtons()"
         (keydown.enter)="onMainButtonEnter($event)"
       >
-        {{ selectedLevel ?? 'N/A' }}
+        {{ selectedLevel ?? '-' }}
       </button>
     </div>
   </div>
