feat(journey-maps): base for dark-mode controls

--- a/src/journey-maps/angular/components/zoom-controls/zoom-controls.scss
+++ b/src/journey-maps/angular/components/zoom-controls/zoom-controls.scss
@@ -25,6 +25,10 @@
     width: 100%;
     left: 0;
     bottom: -1px;
+
+    @at-root .map-control-container.dark #{&} {
+      background: esta.$sbbColorMetal;
+    }
   }
 }
 
