--- a/src/journey-maps/angular/components/level-switch/level-switch.html
+++ b/src/journey-maps/angular/components/level-switch/level-switch.html
@@ -1,6 +1,7 @@
 <div
   class="map-control-container"
   [class.small-buttons]="showSmallButtons"
+  [class.dark]="isDarkMode"
   *ngIf="map && visibleLevels.length"
   @fade
 >
