feat(journey-maps): add dark-mode to teaser

--- a/src/journey-maps/angular/components/feature-event-listener/feature-event-listener.html
+++ b/src/journey-maps/angular/components/feature-event-listener/feature-event-listener.html
@@ -16,6 +16,7 @@
   [template]="overlayTemplate"
   [templateContext]="overlayFeatures"
   [withPaginator]="true"
+  [styleMode]="styleMode"
   (closeClicked)="onOverlayClosed()"
   (mouseEvent)="onOverlayMouseEvent($event)"
   *ngIf="!overlayIsPopup"
