--- a/src/journey-maps/angular/components/marker-details/marker-details.html
+++ b/src/journey-maps/angular/components/marker-details/marker-details.html
@@ -4,6 +4,7 @@
   (closeClicked)="closeClicked.next()"
   [template]="template!"
   [attr.aria-live]="'polite'"
+  [styleMode]="styleMode"
   *ngIf="!popup"
 ></sbb-teaser>
 <sbb-popup
