--- a/src/journey-maps/angular/components/teaser/teaser.html
+++ b/src/journey-maps/angular/components/teaser/teaser.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="rendered">
-  <div #container class="teaser-container" @showHideTrigger>
+  <div #container class="teaser-container" @showHideTrigger [class.dark]="isDarkMode">
     <button
       type="button"
       class="close"
